Fix for top of box-shadow getting cutoff within bundle views

--- a/src/style.css
+++ b/src/style.css
@@ -1195,6 +1195,7 @@ header form input {
 
 /* Fixes box-shadow getting cutoff by parent */
 .Nu {
+	padding-top: 2px;
 	padding-bottom: 6px;
 	height: auto !important;
 }
